<resources>
    <string name="app_name"><b>Sieve</b></string>
    <string name="hello_world"><b>Hello world!</b></string>
    <string name="menu_settings"><b>Settings</b></string>
    <string name="menu_add"><b>Add Entry</b></string>
    <string name="menu_delete"><b>Delete</b></string>
    <string name="pref_title"><b>Settings</b></string>
    <string name="pref_summary"><b>Loliunno</b></string>
    <string name="main_service_started"><b>relebadMemory</b></string>
    <string name="service_error_cantconnect"><b>Unable to connect to the Service, force quit the app and try again</b></string>
    <string name="title_activity_pwlist"><b>Your Passwords</b></string>
    <string name="title_activity_settings"><b>Settings</b></string>
    <string name="title_activity_add_entry"><b>Add new Password</b></string>
    <string name="title_activity_short_login"><b>Sieve</b></string>
    <string name="title_activity_welcome"><b>Welcome!</b></string>
    <string name="title_activity_pin"><b>Enter PIN</b></string>
    <string name="title_activity_file_select"><b>Select File:</b></string>
    <string name="addentry_confirm_delete"><b>Are you sure you want to delete this entry?</b></string>
    <string name="settings_confirm_delete"><b>This will delete the entire database</b></string>
    <string name="settings_confirm_restore"><b>This will replace the current database</b></string>
    <string name="settings_confirm_backup"><b>This will save the database to the SD card</b></string>
    <string name="settings_confirm_netrestore"><b>This will replace the database and query the server for a backup</b></string>
    <string name="settings_confirm_netbackup"><b>This will save the database to the server</b></string>
    <string name="settings_error_cantchangepin"><b>Unable to change pin. Please restart app and try again</b></string>
    <string name="settings_error_dbempty"><b>Database is empty</b></string>
    <string name="settings_error_cantread"><b>Unable to process file</b></string>
    <string name="text_view_add_service"><b>Service:</b></string>
    <string name="text_view_add_username"><b>Username:</b></string>
    <string name="text_view_add_password"><b>Password:</b></string>
    <string name="text_view_add_email"><b>Email:</b></string>
    <string name="text_view_add_password_again"><b>Password\nAgain:</b></string>
    <string name="button_add_save"><b>Save</b></string>
    <string name="button_add_cancel"><b>Cancel</b></string>
    <string name="button_add_delete"><b>Delete</b></string>
    <string name="button_add_add"><b>Add</b></string>
    <string name="button_goto_settings"><b>Settings</b></string>
    <string name="button_submit"><b>Submit</b></string>
    <string name="text_view_pwlist_prompt"><b>Press the \'add\' button to enter your passwords</b></string>
    <string name="text_view_short_prompt"><b>Enter your pin</b></string>
    <string name="text_view_entry_prompt"><b>Enter your data here</b></string>
    <string name="text_view_password"><b>Password</b></string>
    <string name="text_view_password_again"><b>Password\nAgain</b></string>
    <string name="text_view_welcome_message"><b>This password will be used to access your saved passwords, DO NOT FORGET IT as it cannot be recovered!</b></string>
    <string name="text_view_pin_message"><b>This PIN will be required when you come back for a password</b></string>
    <string name="text_view_pin_standard"><b>Dont just go picking 0000!</b></string>
    <string name="text_view_pin_notstandard"><b>No letters!</b></string>
    <string name="text_view_pin_tooshort"><b>must be 4 digits long</b></string>
    <string name="text_view_pin_dontmatch"><b>PINs dont match!</b></string>
    <string name="text_view_pin_notold"><b>Current PIN incorrect</b></string>
    <string name="text_view_password_notstandard"><b>Password cannot contain special characters</b></string>
    <string name="text_view_password_standard"><b>Password must include alpha-numeric digits / Capital letters and be at least 16 characters long</b></string>
    <string name="text_view_password_tooshort"><b>Password is too short! (must be 16 characters long)</b></string>
    <string name="text_view_password_dontmatch"><b>Passwords do not Match!</b></string>
    <string name="text_view_settings_sd"><b>Backup to SD card</b></string>
    <string name="text_view_settings_net"><b>Backup to Net</b></string>
    <string name="text_view_settings_netrestore"><b>Restore from Net</b></string>
    <string name="text_view_settings_restore"><b>Restore from SD card</b></string>
    <string name="text_view_settings_delete"><b>Delete Passwords</b></string>
    <string name="text_view_settings_pinchange"><b>Change Pin</b></string>
    <string name="file_select_prompt"><b>Please select a file</b></string>
    <string name="prompt_email"><b>Email</b></string>
    <string name="prompt_password"><b>Password</b></string>
    <string name="action_sign_in_register"><b>Sign in</b></string>
    <string name="action_sign_in_settings"><b>Settings</b></string>
    <string name="action_sign_in_short"><b>Sign in</b></string>
    <string name="menu_forgot_password"><b>Recover lost password</b></string>
    <string name="login_progress_signing_in"><b>Enter Password</b></string>
    <string name="error_invalid_email"><b>This email address is invalid</b></string>
    <string name="error_invalid_password"><b>This password is too short</b></string>
    <string name="error_incorrect_password"><b>This password is incorrect</b></string>
    <string name="error_field_required"><b>This field is required</b></string>
    <string name="generic_pin_entry"><b>PIN</b></string>
    <string name="generic_pin_entry_again"><b>PIN Again</b></string>
    <string name="generic_pin_entry_old"><b>PIN (Old)</b></string>
</resources>
