<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <Button android:id="@+id/mainlogin_button_login"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in_register"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:onClick="login"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="40dp"
        />

    <Button android:id="@+id/mainlogin_button_settings"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in_settings"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:onClick="settings_login"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        />

    <EditText
        android:id="@+id/mainlogin_edittext_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:imeActionId="69"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/mainlogin_textview_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_progress_signing_in"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        />


</RelativeLayout>