<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >

    <TextView
        android:id="@+id/text_view_add_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/addentry_edittext_service"
        android:layout_alignBottom="@+id/addentry_edittext_service"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:text="@string/text_view_add_service"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/addentry_edittext_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:layout_alignParentRight="true"
        android:inputType="text"
        android:layout_marginRight="40dp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/text_view_add_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_add_username"
        android:layout_alignBottom="@+id/addentry_edittext_username"
        android:layout_alignBaseline="@+id/addentry_edittext_username"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/addentry_edittext_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:layout_below="@+id/addentry_edittext_service"
        android:layout_alignParentRight="true"
        android:inputType="text"
        android:layout_marginRight="40dp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/text_view_add_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_add_email"
        android:layout_alignBottom="@+id/addentry_edittext_email"
        android:layout_alignBaseline="@+id/addentry_edittext_email"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:textColor="@color/black"
        />


    <EditText
        android:id="@+id/addentry_edittext_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:layout_below="@+id/addentry_edittext_username"
        android:layout_alignParentRight="true"
        android:inputType="textWebEmailAddress"
        android:layout_marginRight="40dp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/text_view_add_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_add_password"
        android:layout_alignBottom="@+id/addentry_edittext_password"
        android:layout_alignBaseline="@+id/addentry_edittext_password"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/addentry_edittext_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:layout_below="@+id/addentry_edittext_email"
        android:layout_alignParentRight="true"
        android:inputType="textPassword"
        android:layout_marginRight="40dp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/text_view_add_password_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_add_password_again"
        android:layout_alignBottom="@+id/addentry_edittext_passwordagain"
        android:layout_alignBaseline="@+id/addentry_edittext_passwordagain"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:textColor="@color/black"
        />


    <EditText
        android:id="@+id/addentry_edittext_passwordagain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:layout_below="@+id/addentry_edittext_password"
        android:layout_alignParentRight="true"
        android:inputType="textPassword"
        android:layout_marginRight="40dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/addentry_button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_save"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="40dp"
        />

    <Button
        android:id="@+id/addentry_button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_cancel"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        />

    <Button
        android:id="@+id/addentry_button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="40dp"
        android:text="@string/button_add_delete" />

    <TextView
        android:id="@+id/addentry_textview_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_entry_prompt"
        android:layout_above="@+id/addentry_button_cancel"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        />

</RelativeLayout>