<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <EditText
        android:id="@+id/pinentry_edittext_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:maxLength="4"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:inputType="numberPassword"
        android:layout_marginRight="40dp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/pinentry_edittext_pinagain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:maxLength="4"
        android:layout_below="@+id/pinentry_edittext_pin"
        android:layout_alignParentRight="true"
        android:inputType="numberPassword"
        android:layout_marginRight="40dp"
        android:textColor="@color/black"
        />

    <TextView
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/text_view_pin_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generic_pin_entry"
        android:layout_alignBaseline="@+id/pinentry_edittext_pin"
        android:layout_alignBottom="@+id/pinentry_edittext_pin"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:textColor="@color/black"
        />

    <TextView
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/text_view_pin_password_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generic_pin_entry_again"
        android:layout_alignBaseline="@+id/pinentry_edittext_pinagain"
        android:layout_alignBottom="@+id/pinentry_edittext_pinagain"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/text_view_pin_message"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/pinentry_edittext_pinold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:layout_below="@+id/pinentry_edittext_pinagain"
        android:layout_alignParentRight="true"
        android:inputType="numberPassword"
        android:layout_marginRight="40dp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/text_view_pin_password_old"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generic_pin_entry_old"
        android:layout_alignBaseline="@+id/pinentry_edittext_pinold"
        android:layout_alignBottom="@+id/pinentry_edittext_pinold"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/button_pin_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_submit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:onClick="submit"
        />

    <TextView
        android:id="@+id/pinentry_textview_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_pin_standard"
        android:layout_above="@+id/button_pin_submit"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        />

</RelativeLayout>