<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/text_view_welcome_message"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/welcome_edittext_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:inputType="textPassword"
        android:layout_below="@+id/textView1"
        android:layout_marginRight="40dp"
        android:textColor="@color/black"
        />

    <TextView
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/text_view_welcome_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:text="@string/text_view_password"
        android:layout_alignBaseline="@+id/welcome_edittext_password"
        android:layout_alignBottom="@+id/welcome_edittext_password"
        android:layout_alignParentLeft="true"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/welcome_edittext_passwordagain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:layout_below="@+id/welcome_edittext_password"
        android:layout_alignParentRight="true"
        android:inputType="textPassword"
        android:layout_marginRight="40dp"
        android:textColor="@color/black"
        />

    <TextView
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/text_view_welcome_password_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_password_again"
        android:layout_alignBaseline="@+id/welcome_edittext_passwordagain"
        android:layout_alignBottom="@+id/welcome_edittext_passwordagain"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/welcome_textview_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_password_standard"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/welcome_button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_submit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="submit"
        android:layout_marginBottom="40dp"
        />

</RelativeLayout>